<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_baseline_order"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_baseline_products"
            android:title="@string/menu_products" />

        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/menu_customers"
            />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_baseline_message"
            android:title="@string/menu_message"
            />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>