<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.thecart.admin.fragment.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.thecart.admin.fragment.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.thecart.admin.fragment.ProductFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.thecart.admin.fragment.MessageFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/fragment_message"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.thecart.admin.fragment.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting"/>

    <fragment
        android:id="@+id/nav_customers"
        android:name="com.thecart.admin.fragment.CustomerFragment"
        android:label="@string/menu_customers"
        tools:layout="@layout/fragment_customer"/>
</navigation>